# CARLA2Real

./: .gitignore  pyproject.toml
.complete/: 000-pipeline.md
code/config/: carla_config.yaml
pipeline/: README.md  run_pipeline.py
