[project]
name = "carla2real"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.2.25",
    "imageio[ffmpeg]>=2.37.3",
    "kornia>=0.8.2",
    "lpips>=0.1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "onnx>=1.20.1",
    "onnxruntime-gpu>=1.24.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyqt5>=5.15.11",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "thop>=0.1.1.post2209072238",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.22",
    "urllib3>=2.6.3",
    "yacs>=0.1.8",
]
